# SAST-AI-C-TOOL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test.cpp  tutorial.txt
benchmarks/: run_smoke.py  scan_benchmark.cpp
benchmarks/fixtures/ambiguous_cases/: normalize_path.cpp  unknown_memcpy.cpp
benchmarks/fixtures/cross_function/: cross_function_exec.cpp
benchmarks/fixtures/mixed_repo/: ambiguous_memcpy.cpp  vulnerable_command.cpp
benchmarks/fixtures/safe_lookalikes/: path_under_root.cpp
benchmarks/fixtures/vulnerable_examples/: path_traversal.cpp
docs/: architecture.md  demo.cast
docs/demo/: demo.cast  run_demo.expect
include/sast/cli/: application.hpp  interactive_terminal.hpp
include/sast/frontend_cpp/: tooling_runner.hpp
include/sast/graph/: call_graph.hpp
include/sast/index/: symbol_index.hpp
include/sast/ingest/: cache_store.hpp  file_inventory.hpp
include/sast/ir/: facts.hpp  models.hpp
include/sast/llm_gateway/: review_client.hpp
include/sast/report/: candidate_json_writer.hpp  demo_report_writer.hpp  facts_json_writer.hpp  report_writers.hpp
include/sast/rules/: candidate_detector.hpp  rule_registry.hpp  source_sink_registry.hpp
include/sast/triage/: scan_service.hpp
include/sast/validators/: decision_engine.hpp  finding_validator.hpp  validator_registry.hpp
llm_gateway/: __init__.py  requirements.txt
llm_gateway/app/: __init__.py  main.py  providers.py  schemas.py  service.py  settings.py  validation.py
llm_gateway/tests/: test_api.py  test_prompt_policy.py  test_providers.py  test_schemas.py  test_service.py
maintenencetutorial/: maintenencecommandsandmmore.txt
src/cli/: application.cpp  interactive_terminal.cpp  main.cpp
src/frontend_cpp/: tooling_runner.cpp
src/graph/: call_graph.cpp
src/index/: symbol_index.cpp
src/ingest/: cache_store.cpp  file_inventory.cpp
src/llm_gateway/: review_client.cpp
src/report/: candidate_json_writer.cpp  demo_report_writer.cpp  facts_json_writer.cpp  report_writers.cpp
src/rules/: candidate_detector.cpp  rule_registry.cpp  source_sink_registry.cpp
src/triage/: scan_service.cpp
src/validators/: decision_engine.cpp  finding_validator.cpp  validator_registry.cpp
tests/: test_support.cpp  test_support.hpp
tests/cases/command_injection/: ambiguous.cpp  safe.cpp  suppressed.cpp  vulnerable.cpp
tests/cases/demo/: confirmed_command.cpp
tests/cases/path_traversal/: ambiguous.cpp  safe.cpp  vulnerable.cpp
tests/cases/string_handling/: ambiguous.cpp  safe.cpp  vulnerable.cpp
tests/demo/curated/: confirmed_command.cpp  cross_function_command.cpp  likely_issue_path.cpp  likely_safe_path.cpp  safe_dismissed.cpp
tests/demo/mixed_case/: mixed_paths.cpp
tests/fixtures/cmake_cpp_sample/: CMakeLists.txt
tests/fixtures/cmake_cpp_sample/include/sample/: helpers.hpp
tests/fixtures/cmake_cpp_sample/src/: helpers.cpp  main.cpp
tests/golden/: demo_cli.txt  validated_demo.txt
tests/integration/: candidate_scan_test.cpp  changed_files_scan_test.cpp  cli_demo_test.cpp  cli_facts_test.cpp  cli_report_formats_test.cpp  cli_scan_test.cpp  fact_extraction_test.cpp  llm_review_scan_test.cpp  mixed_demo_case_test.cpp  regression_suite_test.cpp  scan_integration_test.cpp  scan_metrics_test.cpp
tests/regression/false_negatives/: cross_function_exec.cpp
tests/regression/false_positives/: bounded_snprintf.cpp  command_allowlist.cpp  path_under_root.cpp
tests/unit/: cache_store_test.cpp  compilation_database_locator_test.cpp  interactive_terminal_test.cpp  llm_review_client_test.cpp  report_writer_golden_test.cpp  source_sink_registry_test.cpp  validator_test.cpp
